Bug 433006 - Clearing all bookmarks crashes application in KateBookmarks::clearBookmarks()
Summary: Clearing all bookmarks crashes application in KateBookmarks::clearBookmarks()
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.79.0
Platform: Arch Linux Other
: HI crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: regression
: 433466 433539 437269 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-16 12:36 UTC by Kishore Gopalakrishnan
Modified: 2021-11-05 06:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.80.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2021-02-16 12:36:23 UTC
SUMMARY
In applications which use ktexteditor (checked with Kile and Kate), pressing the keyboard shortcut to clear all bookmarks (ctrl+alt+B) crashes the application.

STEPS TO REPRODUCESTEPS TO REPRODUCE:
1. Open Kate
2. Mark a bookmark (ctrl+B)
3. Press Ctrl+alt+B (clear all bookmarks)

OBSERVED RESULT
Application crashes

EXPECTED RESULT
Application should not crash

SOFTWARE/OS VERSIONSOperating System: Arch Linux
KDE Plasma Version: 5.20.90
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Backtrace generated by the crash handler follows:

Application: Kate (kate), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f29bdf704e5 in KateBookmarks::clearBookmarks (this=0x559be1e4f700) at /usr/src/debug/ktexteditor-5.79.0/src/utils/katebookmarks.cpp:107
#5  0x00007f29bc3b2d86 in QtPrivate::QSlotObjectBase::call (a=0x7ffe0493b2d0, r=0x559be1e4f700, this=0x559be1f14bd0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#6  doActivate<false> (sender=0x559be1f14860, signal_index=4, argv=argv@entry=0x7ffe0493b2d0) at kernel/qobject.cpp:3886
#7  0x00007f29bc3abf20 in QMetaObject::activate (sender=sender@entry=0x559be1f14860, m=m@entry=0x7f29bd3bc6c0 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe0493b2d0) at kernel/qobject.cpp:3946
#8  0x00007f29bceabf63 in QAction::triggered (this=this@entry=0x559be1f14860, _t1=<optimized out>) at .moc/moc_qaction.cpp:376
#9  0x00007f29bceae845 in QAction::activate (this=0x559be1f14860, event=event@entry=QAction::Trigger) at kernel/qaction.cpp:1161
#10 0x00007f29bceaf488 in QAction::event (e=<optimized out>, this=<optimized out>) at kernel/qaction.cpp:1086
#11 QAction::event (this=<optimized out>, e=<optimized out>) at kernel/qaction.cpp:1075
#12 0x00007f29bceb2752 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x559be1f14860, e=0x7ffe0493b4b0) at kernel/qapplication.cpp:3632
#13 0x00007f29bc37ba2a in QCoreApplication::notifyInternal2 (receiver=0x559be1f14860, event=0x7ffe0493b4b0) at kernel/qcoreapplication.cpp:1063
#14 0x00007f29bc78cdbd in QShortcutMap::dispatchEvent (this=this@entry=0x559bd8711998, e=e@entry=0x7ffe0493b570) at kernel/qshortcutmap.cpp:675
#15 0x00007f29bc78d7c3 in QShortcutMap::tryShortcut (this=this@entry=0x559bd8711998, e=e@entry=0x7ffe0493b570) at kernel/qshortcutmap.cpp:343
#16 0x00007f29bc7352b4 in QWindowSystemInterface::handleShortcutEvent (window=0x7ffe0493b570, timestamp=12589655, keyCode=66, modifiers=..., nativeScanCode=56, nativeVirtualKey=98, nativeModifiers=12, text=..., autorepeat=false, count=1) at kernel/qwindowsysteminterface.cpp:477
#17 0x00007f29bc75839c in QGuiApplicationPrivate::processKeyEvent (e=0x7ffe0493b710) at kernel/qguiapplication.cpp:2395
#18 0x00007f29b79c96c3 in QIBusPlatformInputContext::filterEventFinished (this=<optimized out>, call=0x559be1cdbf10) at qibusplatforminputcontext.cpp:517
#19 0x00007f29bc3b2d86 in QtPrivate::QSlotObjectBase::call (a=0x7ffe0493b8b0, r=0x559bd880f920, this=0x7f29b0007720) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#20 doActivate<false> (sender=0x559be1cdbf10, signal_index=3, argv=argv@entry=0x7ffe0493b8b0) at kernel/qobject.cpp:3886
#21 0x00007f29bc3abf20 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f29bd487900 <QDBusPendingCallWatcher::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffe0493b8b0) at kernel/qobject.cpp:3946
#22 0x00007f29bd4689e0 in QDBusPendingCallWatcher::finished (this=<optimized out>, _t1=<optimized out>) at .moc/moc_qdbuspendingcall.cpp:158
#23 0x00007f29bc3a8532 in QObject::event (this=0x559be1cdbf10, e=0x559be226ee40) at kernel/qobject.cpp:1314
#24 0x00007f29bceb2752 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x559be1cdbf10, e=0x559be226ee40) at kernel/qapplication.cpp:3632
#25 0x00007f29bc37ba2a in QCoreApplication::notifyInternal2 (receiver=0x559be1cdbf10, event=0x559be226ee40) at kernel/qcoreapplication.cpp:1063
#26 0x00007f29bc37e523 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x559bd8710970) at kernel/qcoreapplication.cpp:1817
#27 0x00007f29bc3d5054 in postEventSourceDispatch (s=0x559bd880e090) at kernel/qeventdispatcher_glib.cpp:277
#28 0x00007f29b8a1bb84 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#29 0x00007f29b8a6fc21 in ?? () from /usr/lib/libglib-2.0.so.0
#30 0x00007f29b8a1a3b1 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#31 0x00007f29bc3d4691 in QEventDispatcherGlib::processEvents (this=0x559bd880f3d0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#32 0x00007f29bc37a3ac in QEventLoop::exec (this=this@entry=0x7ffe0493bcd0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#33 0x00007f29bc382844 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#34 0x0000559bd8262369 in ?? ()
#35 0x00007f29bbd41b25 in __libc_start_main () from /usr/lib/libc.so.6
#36 0x0000559bd826394e in _start ()
[Inferior 1 (process 145569) detached]
Comment 1 Kishore Gopalakrishnan 2021-02-16 12:37:18 UTC
I forgot to mention that downgrading ktexteditor to 5.78 fixes the issue.
Comment 2 Christoph Cullmann 2021-02-16 19:58:24 UTC
Git commit 52b576ed83d7329c28d94ae283481f05dd97cc81 by Christoph Cullmann.
Committed on 16/02/2021 at 19:57.
Pushed by cullmann into branch 'master'.

avoid crash on clearing of bookmarks

M  +8    -5    src/utils/katebookmarks.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/52b576ed83d7329c28d94ae283481f05dd97cc81
Comment 3 Christoph Cullmann 2021-02-16 20:01:45 UTC
Thanks for reporting this, dumb error, sorry!
Comment 4 Dominik Haumann 2021-02-23 21:19:02 UTC
*** Bug 433466 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Cullmann 2021-02-24 17:39:27 UTC
*** Bug 433539 has been marked as a duplicate of this bug. ***
Comment 6 Waqar Ahmed 2021-11-05 06:18:31 UTC
*** Bug 437269 has been marked as a duplicate of this bug. ***