avoid crash on clearing of bookmarks

BUG: 433006